# cdss

./: .gitignore  CDSS.md  CDSS_Implementation_Plan.md  Diagnosis.txt  RUNBOOK.md  cdss_audit_test.db-journal  compose.yaml  development plan.txt  directive.txt  enrichment.txt  remediation.txt  ruff.toml  rules.txt  scope.txt  task.txt
CDSS-UMLS/: .gitignore  Makefile  README.md  check_env.py  pyproject.toml  requirements.txt  reset_pgadmin.sh  restart_api.sh  restart_docker_api.sh  start_local.sh  start_qdrant.sh  test_qdrant_rag.py
CDSS-UMLS/api/: __init__.py  config.py  db.py  main.py
CDSS-UMLS/api/models/: __init__.py  umls.py
CDSS-UMLS/api/routers/: admin.py  healthcheck.py  inference_v1.py  inference_v2.py  terminology.py
CDSS-UMLS/api/services/: __init__.py  umls_service.py
CDSS-UMLS/api/utils/: cache.py  logging.py
CDSS-UMLS/etl/: __init__.py  clear_database.py  clear_qdrant.py  combine_umls.py  download_umls.py  generate_embeddings.py  generate_embeddings_qdrant.py  load_postgres.py  load_processed_data.py  quick_query.py  test_parse_fix.py  transform_umls.py  verify_data.py
CDSS-UMLS/etl/sql/: 01_pgvector_init.sql  02_create_tables.sql  03_index_optimizations.sql
CDSS-UMLS/experiments/notebooks/: 01_data_exploration.ipynb  02_umls_semantic_network.ipynb  03_rag_eval.ipynb
CDSS-UMLS/infrastructure/docker/: Dockerfile.api  Dockerfile.etl  Dockerfile.worker  docker-compose.yml
CDSS-UMLS/infrastructure/k8s/: configmap.yaml  deployment.yaml  service.yaml
CDSS-UMLS/infrastructure/terraform/: main.tf  variables.tf
CDSS-UMLS/tests/: test_inference.py  test_rag_v1.py  test_rag_v2.py  test_umls_search.py
HIV-agent/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  alembic.ini  append_css.py  docker-compose.yml  issues.txt  pyproject.toml  requirements-backend.txt  test_admin_frontend_static.py  test_api.py  test_audit_fallback.py  test_evidence.py  test_imports.py  test_memory.py  test_observability.py  test_packaging.py  test_pageindex.py  test_phase7.py  test_query_routing.py  test_retry.py  test_terminology_boundary.py
HIV-agent/.streamlit/: config.toml
HIV-agent/alembic/: env.py
HIV-agent/alembic/versions/: 0001_initial_foundation.py  0002_memory_foundation.py  0003_evidence_graph_fields.py  0004_upsert_constraints.py  0007_patient_state.py  (+4 more)
HIV-agent/app/: SECURITY.md  SETUP.md  api.py  app.py  cds_hooks.py  config.py  custom_styles.css  db.py  ddx.py  documents.py  evidence.py  ingest.py  logs.py  main.py  memory.py  migrations.py  models.py  observability.py  patient_state.py  phase7.py  providers.py  pyproject.toml  repositories.py  requirements-api.txt  requirements.txt  retry.py  schema.py  scoring.py  search_agent.py  search_tools.py
HIV-agent/docs/: production_architecture.txt
HIV-agent/frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
HIV-agent/scripts/: annotate_kb.py  benchmark.py  build_hiv_kb_tables.py  build_pageindex.py  check.ps1  dev-backend.ps1  dev-frontend.ps1  dev-services.ps1  download_model_local.py  env.ps1  index_malaria_minimal.py  index_remaining_5.py  ingest.ps1  lancedb_write_probe.py  migrate.ps1  phase01_smoke.py  repair_cache.py  seed_evidence.py  synthetic_index_test.py
ambulance-cdss/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  postgres.env.example  pyproject.toml
ambulance-cdss/admin-ui/: index.html
ambulance-cdss/alembic/: env.py  script.py.mako
ambulance-cdss/app/: __init__.py  auth.py  cache.py  config.py  db.py  handoff.py  handoff_link.py  main.py  models.py  nlp_extractor.py  observability.py  repositories.py  retry.py
ambulance-cdss/dispatcher-ui/: app.js  config.js  dashboard.html  dashboard.js  index.html  style.css
ambulance-cdss/docs/: ASSESSMENT.txt  BRAINSTORM 2.txt  BRAINSTORM.txt  E911_CONTRACT.md  GOVERNANCE.md  Gap Analysis.txt  HANDOFF.txt  HARNESS.txt  HOMESTRETCH.txt  HOW TO RUN.txt  IMPLEMENTATION PLAN.txt  IMPROVEMENTS 2.txt  IMPROVEMENTS 3.txt  IMPROVEMENTS 4.txt  IMPROVEMENTS.txt  OPERATIONAL MATURITY.txt  ORIGINAL LIST.txt  OUT_OF_SCOPE.md  PHASE_STATUS.md  SIGN_OFF_CHECKLIST.md  TECHNICAL REPORT.txt
ambulance-cdss/field-ui/: app.js  config.js  index.html  manifest.json  style.css  sw.js
ambulance-cdss/receiving-ui/: app.js  index.html  style.css
ambulance-cdss/tests/: comprehensive_tests.py  deep_test_backend.py  deep_test_journeys.py  e2e_live.py  e2e_realistic.py  frontend_verification_report.txt  functional_tests.py  homestretch_tests.py  test_answer_correction.py  test_audit_export.py  test_auth.py  test_backtracking_policy.py  test_dashboard.py  test_entity_extraction.py  test_eta_tracking.py  test_field_protocol.py  test_governance_and_select_protocol.py  test_guidance_note_schema.py  test_handoff.py  test_incident_notes.py  test_list_incidents.py  test_pre_arrival_confirmation.py  test_protocol_choking.py  test_protocol_matching.py  test_protocol_registry.py  test_protocol_reload.py  test_protocol_runner.py  test_protocol_sign_off_gate.py  test_protocol_trauma.py  test_scoring.py  test_shift_handover.py  test_sse_stream.py  test_status_transitions.py  test_timeline.py  test_unit_location.py  test_version_mismatch.py  test_vitals_trend.py
facility-mapper/: .env.example  Dockerfile  alembic.ini  pyproject.toml
facility-mapper/alembic/: env.py
facility-mapper/app/: __init__.py  config.py  data.py  db.py  geocoding.py  main.py  matcher.py  models.py  schemas.py
facility-mapper/data/: facilities.csv
facility-mapper/scripts/: __init__.py  load_facilities.py
facility-mapper/tests/: __init__.py  conftest.py  test_load_facilities.py  test_matcher.py
shared/: pyproject.toml
shared/ambulance_cdss_contracts/: __init__.py  facility.py  incident_capture.py  triage.py
shared/tests/: __init__.py  test_contracts.py
triage-ranker/: .env.example  Dockerfile  pyproject.toml
triage-ranker/app/: __init__.py  config.py  main.py  schemas.py
triage-ranker/tests/: __init__.py  conftest.py  test_pipeline.py  test_triage_e2e.py
(+143 files in other folders)
