[tool.poetry]
name = "umls-cdss"
version = "1.0.0"
description = "Clinical Decision Support System powered by UMLS and LLMs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "api"}, {include = "etl"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

# Vector database
pgvector = "^0.2.4"
qdrant-client = "^1.7.0"

# LLM integrations
openai = "^1.3.5"
httpx = "^0.25.1"

# RAG and embeddings
sentence-transformers = "^2.2.2"
rank-bm25 = "^0.2.2"
numpy = "^1.24.3"

# Evaluation
nltk = "^3.8.1"
rouge-score = "^0.1.2"

# Caching
redis = "^5.0.1"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
tqdm = "^4.66.0"

# Data processing
pandas = "^2.1.3"

# Graph analysis (for experiments)
networkx = "^3.2.1"

# Logging
structlog = "^23.2.0"
umls-downloader = "^0.1.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

# Code quality
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.group.experiments.dependencies]
# Jupyter (for experiments)
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.26.0"

[tool.poetry.scripts]
cdss-api = "api.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

