[project]
name = "kenya-clinical-cdss"
version = "0.1.0"
description = "Kenya clinical decision support system with guideline-grounded retrieval"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.38.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic-ai>=0.0.14",
    "docling>=2.0.0",
    "pymupdf4llm>=0.0.17",
    "pdfplumber>=0.11.0",
    "pypdf>=4.2.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.3.0",
    "rerankers>=0.10.0",
    "tiktoken>=0.7.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "semantic-text-splitter>=0.17.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=24.1.0",
    "ruff>=0.3.0",
    "jupyter>=1.0.0",
]
