[project]
name = "ambulance-cdss"
version = "0.1.0"
description = "Ambulance dispatch and field clinical decision support system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    # NLP — clinical entity extraction
    "medspacy>=1.1.0",
    "spacy>=3.7.0",
    "redis>=8.0.1",
]

[project.optional-dependencies]
nlp = [
    # Heavy NLP extras — install separately if full NER is needed
    # After install, download model: python -m spacy download en_core_sci_lg
    "scispacy>=0.5.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.uv]
# uv configuration. See README.md for setup commands.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
