[project]
name = "ambulance-cdss-contracts"
version = "0.1.0"
description = "Shared Pydantic v2 contract schemas for the ambulance CDSS ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ambulance_cdss_contracts"]
